# Realtime-multimodal-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  demo_bundle.py  docker-compose.yml  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml
data/: demo_bundle.pkl
data/benchmarks/: .gitkeep
data/samples/: .gitkeep
docs/: architecture.md  latency_budget.md
monitoring/: prometheus.yml
scripts/: benchmark_latency.py  demo_client.py  generate_test_audio.py  load_test.py
src/: __init__.py
src/api/: app.py
src/api/routes/: audio.py  health.py  stream.py
src/api/websocket/: handler.py
src/audio/: __init__.py  processor.py  transcription.py  tts.py
src/config/: settings.py
src/llm/: __init__.py  intent.py  pipeline.py
src/monitoring/: metrics.py  tracing.py
src/pipeline/: __init__.py  circuit_breaker.py  latency_budget.py  orchestrator.py  timeout_handler.py
src/vision/: processor.py
tests/: conftest.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_audio_processor.py  test_circuit_breaker.py  test_latency_budget.py  test_timeout_handler.py
