[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "realtime-multimodal-assistant"
version = "1.0.0"
description = "Real-time multimodal voice intelligence assistant with latency budget enforcement"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Muhammad Farooq", email = "mfarooqshafee333@gmail.com" }]
keywords = ["voice-assistant", "multimodal", "real-time", "whisper", "fastapi", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ─── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"
timeout = 30

# ─── black ────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'

# ─── ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TCH", "ANN001", "ANN201"]
ignore = ["ANN001", "ANN201", "B008"]  # FastAPI dependency injection uses defaults
per-file-ignores = { "tests/*" = ["S101"] }  # allow assert in tests

# ─── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/"]

# ─── coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["src/api/app.py", "*/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
